@@ -132,6 +132,8 @@ class GitPackageManagementBuildPackageProcessor extends modObjectProcessor {
         if (!empty($resourcesArray)) {
             $vehicle->addResourceResolver($this->packagePath . '_build/gpm_resolvers', $resourcesArray);
         }
+        
+        $this->addSystemSettings();
 
         $after = $resolver->getAfter();
         foreach($after as $script) {
@@ -140,7 +142,6 @@ class GitPackageManagementBuildPackageProcessor extends modObjectProcessor {
 
         $this->builder->putVehicle($vehicle);
         $this->addMenus();
-        $this->addSystemSettings();
 
         $packageAttributes = array();
 
